@@ -27,7 +27,7 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  */
-/* $Amigan: fakedbfs/include/fakedbfs/dbspecdata.h,v 1.6 2005/11/24 02:41:56 dcp1990 Exp $ */
+/* $Amigan: fakedbfs/include/fakedbfs/dbspecdata.h,v 1.7 2005/11/27 02:51:26 dcp1990 Exp $ */
 #ifndef HAVE_DBSPECDATA_H
 #define HAVE_DBSPECDATA_H 1
 #define MAXLINE 2048
@@ -80,7 +80,9 @@ enum DataType {
 	binary,
 	oenum, /* DO NOT USE FOR "OTHER" IN AN ENUM */
 	oenumsub, /* this either; this is for .sub references */
-	usnumber /* new type for unsigned numbers */
+	usnumber, /* new type for unsigned numbers */
+	datime /* date and time; see lastupdate (this is really like number, but treated differently for display
+	purposes */
 };
 
 /* Enum stuff */
