@@ -27,7 +27,7 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  */
-/* $Amigan: fakedbfs/libfakedbfs/sqlite.c,v 1.21 2005/11/27 02:37:01 dcp1990 Exp $ */
+/* $Amigan: fakedbfs/libfakedbfs/sqlite.c,v 1.22 2005/11/27 02:51:29 dcp1990 Exp $ */
 /* system includes */
 #include <string.h>
 #include <stdlib.h>
@@ -39,7 +39,7 @@
 /* us */
 #include <fakedbfs.h>
 
-RCSID("$Amigan: fakedbfs/libfakedbfs/sqlite.c,v 1.21 2005/11/27 02:37:01 dcp1990 Exp $")
+RCSID("$Amigan: fakedbfs/libfakedbfs/sqlite.c,v 1.22 2005/11/27 02:51:29 dcp1990 Exp $")
 
 
 int open_db(f)
@@ -158,6 +158,7 @@ const char* gettype(t)
 		case boolean:
 		case oenum:
 		case oenumsub:
+		case datime:
 			return " INTEGER DEFAULT 0";
 			break;
 		case string:
@@ -400,6 +401,7 @@ int bind_field(f, count, type, value, len, stmt)
 		case usnumber:
 		case boolean:
 		case oenum:
+		case datime:
 		case oenumsub:
 			if(sqlite3_bind_int(stmt, (*count)++, value != NULL ? *(int*)value : 0x0) != SQLITE_OK) {
 				return ERR(die, "bind_int: %s", sqlite3_errmsg(f->db));
